# MultiModalAI-MLOps

./: .dvcignore  .env  .env.example  .gitignore  LICENSE  Makefile  README.md  pyproject.toml
.dvc/: config
dags/: dag_datasets.py  ingestion_dag.py  training_dag.py
data/: .gitignore  embeddings.dvc  processed.dvc  raw.dvc
docker/01_storage/: docker-compose.yaml
docker/01_storage/init/: 01_create_tables.sql
docker/02_tracking/: Dockerfile  docker-compose.yaml
docker/03_orchestration/: Dockerfile  docker-compose.yaml
docker/04_inference/: Dockerfile  docker-compose.yaml
docker/05_streamlit/: .dockerignore  Dockerfile  docker-compose.yaml
docker/05_streamlit/.streamlit/: config.toml
notebooks/: 01-eda.ipynb  02-Modelisation.ipynb
src/multimodal_ai/api/: main.py
src/multimodal_ai/config/: settings.py
src/multimodal_ai/features/: base_image_embedder.py  base_text_embedder.py  build_embeddings.py  image_dataset.py  image_encoder_infer.py  image_encoder_train.py  skip_duplicate_emb.py  text_cleaner.py  text_encoder_infer.py  text_encoder_train.py
src/multimodal_ai/ingestion/: ingestion_pipeline.py  skip_duplicate_batch.py
src/multimodal_ai/models/: fusion_module.py
src/multimodal_ai/streamlit/: main.py
src/multimodal_ai/streamlit/components/: minio_client.py  styles.py
src/multimodal_ai/streamlit/pages/: 1_demo.py  2_gallery.py  3_pipeline.py  4_monitoring.py
src/multimodal_ai/tracking/: mlflow_logger.py
src/multimodal_ai/training/: train.py  tuning.py
src/multimodal_ai/transformation/: quality_checks.py  text_cleaner.py  transformation_pipeline.py
src/multimodal_ai/utils/: callbacks.py
src/multimodal_ai/versioning/: dvc_versioning.py
tests/: conftest.py  test_api.py  test_base_image_embedder.py  test_base_text_embedder.py  test_callbacks.py  test_fusion_module.py  test_image_dataset.py  test_image_encoder_infer.py  test_image_encoder_train.py  test_text_cleaner.py  test_text_encoder_infer.py  test_text_encoder_train.py
