[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "multimodalai_mlops"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "apache-airflow==2.11.0",
    "apache-airflow-providers-amazon>=9.18.1",
    "apache-airflow-providers-postgres>=6.5.1",
    "argparse>=1.4.0",
    "matplotlib>=3.10.7",
    "mlflow==3.6.0",
    "numpy>=2.3.4",
    "optuna>=4.6.0",
    "pandas>=2.3.3",
    "pydantic>=2.12.4",
    "pydantic-settings>=2.12.0",
    "seaborn>=0.13.2",
    "sentence-transformers>=5.1.2",
    "timm>=1.0.22",
    "torch>=2.9.1",
    "tqdm>=4.67.1",
]

[dependency-groups]
dev = [
    "pyright>=1.1.407",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "ruff>=0.14.8",
    "ty>=0.0.1a33",
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["multimodal_ai*"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-v --cov=multimodal_ai"


[tool.pyright]
include = ["src"]
extraPaths = ["src"]
venvPath = "."
venv = ".venv"
