[project]
name = "multimodalai_mlops"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.7",
    "mlflow==3.6.0",
    "numpy>=2.3.4",
    "pyarrow>=20.0.0",
    "optuna>=4.6.0",
    "pandas>=2.3.3",
    "pydantic>=2.12.4",
    "pydantic-settings>=2.12.0",
    "seaborn>=0.13.2",
    "sentence-transformers>=5.1.2",
    "timm>=1.0.22",
    "torch>=2.9.1",
    "tqdm>=4.67.1",
]

[dependency-groups]
streamlit = [
    "streamlit>=1.52.0",
    "plotly>=5.24.0",
    "psycopg2-binary>=2.9.10",
    "boto3>=1.35.0",
    "pillow>=10.0.0",
]
dev = [
    "httpx>=0.28.1",
    "pyright>=1.1.407",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "python-multipart>=0.0.22",
    "ruff>=0.14.8",
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["multimodal_ai*"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-v --cov=multimodal_ai"


[tool.pyright]
include = ["src"]
extraPaths = ["src"]
venvPath = "."
venv = ".venv"
